<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingStart="12dp"
    android:paddingTop="8dp"
    android:paddingEnd="12dp"
    android:paddingBottom="8dp"
    tools:layout_height="match_parent">

    <Spinner
        android:id="@+id/act_edit1_spinner1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/act_edit1_spinner2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/act_edit1_seekbar1"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_spinner1"
        tools:visibility="visible" />


    <RadioGroup
        android:id="@+id/act_edit1_radiogroup11"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_seekbar1">

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_111"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_1" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_112"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_2" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_113"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_3" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/act_edit1_radiogroup12"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_edit1_radiogroup11"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_seekbar1">

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_121"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_1" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_122"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_2" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_123"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_3" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_124"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_4" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_125"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_5" />

    </RadioGroup>


    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/act_edit1_seekbar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_radiogroup11"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/act_edit1_radiogroup21"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_seekbar2">

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_211"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_1" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_212"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_2" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_213"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_edit_3" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/act_edit1_radiogroup22"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/act_edit1_radiogroup21"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_seekbar2">

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_221"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_1" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_222"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_2" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_223"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_3" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_224"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_4" />

        <RadioButton
            android:id="@+id/act_edit1_radio_btn_225"
            style="@style/act_edit1_radio_btn"
            android:text="@string/edit1_num_5" />

    </RadioGroup>

    <TextView
        android:id="@+id/act_edit1_tv_event1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="1级分类"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_edit1_radiogroup22" />


    <android.support.constraint.Group
        android:id="@+id/act_edit1_edit_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="8dp" />


</android.support.constraint.ConstraintLayout>